--- a/car-analytics-service/src/main/resources/application.properties
+++ b/car-analytics-service/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+server.port= 8086
+
+# database configs
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/car_post_analytics
+spring.datasource.username= postgres
+spring.datasource.password= 1234
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= create
+
+# kafka configs
+
+spring.kafka.bootstrap-servers= localhost:9092
